--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.0",
+    "reactstrap": "^8.6.0",
     "redux": "^4.0.5",
     "web-vitals": "^0.2.4"
+  },
+  "peerDependencies": {
+    "react": "^16.8.0 || ^17"
   },
   "scripts": {
     "start": "react-scripts start",
